Allow sysconfig to override more defaults